--- a/peer/index.html
+++ b/peer/index.html
@@ -2024,6 +2024,102 @@ document.addEventListener('DOMContentLoaded', () => {
   el.addEventListener('blur', show);
 });
 </script>
- 
+ <!-- === BED Custom Confirm Modal === -->
+<style>
+.modal-backdrop {
+  position: fixed;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background: rgba(0,0,0,0.45);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+.modal-box {
+  background: #fff;
+  border-radius: 16px;
+  width: 90%;
+  max-width: 360px;
+  box-shadow: 0 6px 18px rgba(0,0,0,0.25);
+  overflow: hidden;
+  font-family: system-ui, sans-serif;
+  animation: fadeIn .25s ease;
+}
+.modal-header {
+  background: #1E90FF;
+  color: #fff;
+  font-weight: 700;
+  text-align: center;
+  padding: 12px;
+}
+.modal-body {
+  padding: 18px;
+  text-align: center;
+  color: #333;
+  font-size: 15px;
+  line-height: 1.5;
+}
+.modal-actions {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 12px 0 16px;
+  background: #f9f9f9;
+}
+.modal-actions button {
+  border: none;
+  border-radius: 10px;
+  font-size: 15px;
+  font-weight: 600;
+  padding: 8px 24px;
+  cursor: pointer;
+}
+.btn-primary { background:#1E90FF; color:#fff; }
+.btn-secondary { background:#ddd; color:#333; }
+@keyframes fadeIn { from {opacity:0; transform:scale(.95);} to {opacity:1; transform:scale(1);} }
+</style>
+
+<div id="confirmModal" class="modal-backdrop">
+  <div class="modal-box">
+    <div class="modal-header">Please confirm</div>
+    <div class="modal-body">
+      Are you sure you want to submit now?<br />
+      Your assessment scores will be automatically saved.
+    </div>
+    <div class="modal-actions">
+      <button id="cancelConfirm" class="btn-secondary">Cancel</button>
+      <button id="okConfirm" class="btn-primary">OK</button>
+    </div>
+  </div>
+</div>
+
+<script>
+(function(){
+  const modal = document.getElementById('confirmModal');
+  const ok = document.getElementById('okConfirm');
+  const cancel = document.getElementById('cancelConfirm');
+  const submitBtn = document.getElementById('submitAll');
+
+  if(!modal || !submitBtn) return;
+
+  // Intercept Submit click
+  submitBtn.addEventListener('click', function(e){
+    e.preventDefault();
+    modal.style.display = 'flex';
+  });
+
+  // Cancel hides modal
+  cancel.addEventListener('click', () => {
+    modal.style.display = 'none';
+  });
+
+  // OK continues normal submit
+  ok.addEventListener('click', () => {
+    modal.style.display = 'none';
+    submitBtn.removeEventListener('click', () => {}); // guard
+    submitBtn.disabled = true;
+    submitBtn.click();
+  });
+})();
+</script>
     </body>
 </html>
