--- a/team/index.html
+++ b/team/index.html
@@ -2088,6 +2088,66 @@ document.addEventListener('DOMContentLoaded', () => {
       Are you sure you want to submit now?<br />
       Your assessment scores will be automatically saved.
     </div>
+<!-- === BED Custom Confirm Modal (Refined version) === -->
+<style>
+.modal-backdrop {
+  position: fixed;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background: rgba(0,0,0,0.45);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+.modal-box {
+  background: #fff;
+  border-radius: 14px;
+  width: 90%;
+  max-width: 360px;
+  box-shadow: 0 6px 18px rgba(0,0,0,0.25);
+  overflow: hidden;
+  font-family: system-ui, sans-serif;
+  padding: 20px;
+  animation: fadeIn .25s ease;
+}
+.modal-header {
+  font-weight: 700;
+  font-size: 17px;
+  color: #111;
+  text-align: left;
+  margin-bottom: 6px;
+}
+.modal-body {
+  text-align: left;
+  color: #333;
+  font-size: 15px;
+  line-height: 1.5;
+  margin-bottom: 18px;
+}
+.modal-actions {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+}
+.modal-actions button {
+  border: none;
+  border-radius: 10px;
+  font-size: 15px;
+  font-weight: 600;
+  padding: 8px 22px;
+  cursor: pointer;
+}
+.btn-primary { background:#1E90FF; color:#fff; }
+.btn-secondary { background:#ddd; color:#333; }
+@keyframes fadeIn { from {opacity:0; transform:scale(.95);} to {opacity:1; transform:scale(1);} }
+</style>
+
+<div id="confirmModal" class="modal-backdrop">
+  <div class="modal-box">
+    <div class="modal-header">Are you sure?</div>
+    <div class="modal-body">
+      Your assessment scores will be automatically saved.
+    </div>
     <div class="modal-actions">
       <button id="cancelConfirm" class="btn-secondary">Cancel</button>
       <button id="okConfirm" class="btn-primary">OK</button>
