--- a/team/index.html
+++ b/team/index.html
@@ -2088,68 +2088,25 @@ document.addEventListener('DOMContentLoaded', () => {
       Are you sure you want to submit now?<br />
       Your assessment scores will be automatically saved.
     </div>
-<!-- Custom "Are you sure?" confirmation modal -->
+<!-- Custom "Are you sure?" confirmation modal (white, left text, right buttons) -->
 <style>
-  #confirmModal {
-    position: fixed;
-    inset: 0;
-    background: rgba(0, 0, 0, 0.4);
-    display: none;
-    align-items: center;
-    justify-content: center;
-    z-index: 9999;
-  }
-  #confirmModal .modal-box {
-    background: #fff;
-    border-radius: 14px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.25);
-    padding: 22px 24px;
-    width: 86%;
-    max-width: 380px;
-    font-family: "Roboto", sans-serif;
-    text-align: left;
-  }
-  #confirmModal h3 {
-    font-size: 18px;
-    font-weight: 700;
-    color: #000;
-    margin: 0 0 10px 0;
-  }
-  #confirmModal p {
-    font-size: 16px;
-    font-weight: 400;
-    color: #333;
-    margin: 0 0 18px 0;
-    line-height: 1.4;
-  }
-  #confirmModal .btn-row {
-    text-align: right;
-  }
-  #confirmModal button {
-    font-size: 15px;
-    font-weight: 600;
-    border: none;
-    border-radius: 6px;
-    padding: 8px 18px;
-    margin-left: 10px;
-  }
-  #confirmModal .btn-cancel {
-    background: #e0e0e0;
-    color: #333;
-  }
-  #confirmModal .btn-ok {
-    background: #1E90FF;
-    color: #fff;
-  }
+  #confirmModal{position:fixed;inset:0;background:rgba(0,0,0,.45);display:none;align-items:center;justify-content:center;z-index:9999}
+  #confirmModal .modal-box{background:#fff;border-radius:14px;box-shadow:0 2px 8px rgba(0,0,0,.25);padding:22px 24px;width:86%;max-width:380px;font-family:system-ui,Arial,sans-serif;text-align:left}
+  #confirmModal .title{font-size:17px;font-weight:700;color:#111;margin:0 0 8px}
+  #confirmModal .text{font-size:15px;font-weight:400;color:#333;line-height:1.5;margin:0 0 18px}
+  #confirmModal .actions{display:flex;justify-content:flex-end;gap:10px}
+  #confirmModal button{font-size:15px;font-weight:600;border:none;border-radius:10px;padding:8px 22px;cursor:pointer}
+  #confirmModal .btn-cancel{background:#ddd;color:#333}
+  #confirmModal .btn-ok{background:#1E90FF;color:#fff}
 </style>
 
-<div id="confirmModal">
+<div id="confirmModal" role="dialog" aria-modal="true" aria-labelledby="confirmTitle" aria-describedby="confirmText">
   <div class="modal-box">
-    <h3>Are you sure?</h3>
-    <p>Your assessment scores will be automatically saved.</p>
-    <div class="btn-row">
-      <button class="btn-cancel" id="cancelConfirm">No</button>
-      <button class="btn-ok" id="okConfirm">Yes</button>
+    <div id="confirmTitle" class="title">are you sure?</div>
+    <div id="confirmText" class="text">your assessment scores will be automatically saved.</div>
+    <div class="actions">
+      <button id="cancelConfirm" class="btn-cancel" type="button">no</button>
+      <button id="okConfirm" class="btn-ok" type="button">yes</button>
     </div>
   </div>
 </div>
@@ -2160,24 +2117,21 @@ document.addEventListener('DOMContentLoaded', () => {
   const cancel = document.getElementById("cancelConfirm");
   const ok = document.getElementById("okConfirm");
   const submitBtn = document.getElementById("submitAll");
+  if (!submitBtn || !modal) return;
 
-  if (!submitBtn) return;
+  // open modal instead of submitting
+  function intercept(e){ e.preventDefault(); modal.style.display = "flex"; setTimeout(()=>cancel.focus(),100); }
+  submitBtn.addEventListener("click", intercept);
 
-  submitBtn.addEventListener("click", (e) => {
-    e.preventDefault();
-    modal.style.display = "flex";
-    // Auto-focus "No" button for accessibility
-    setTimeout(() => cancel.focus(), 100);
-  });
+  // close
+  cancel.addEventListener("click", () => { modal.style.display = "none"; });
 
-  cancel.addEventListener("click", () => {
-    modal.style.display = "none";
-  });
-
+  // proceed
   ok.addEventListener("click", () => {
     modal.style.display = "none";
+    submitBtn.removeEventListener("click", intercept); // prevent loop
     submitBtn.disabled = true;
-    submitBtn.click();
+    submitBtn.click(); // runs your existing submit logic
   });
 })();
 </script>
