--- a/peer/index.html
+++ b/peer/index.html
@@ -725,16 +725,24 @@
                 <div class="big-check"></div>
                 <div class="center">
                     <h3 style="font-size: 32px; margin: 8px 0 6px 0; color: #444;">
-                        peer assessment<br />
-                        completed
-                    <h3>Congratulations!</h3>
-<p id="recordedMsg" style="font-size:17px; font-weight:500; color:#444; line-height:1.4; margin-bottom:4px;">
-  Your assessment is recorded.
-</p>
-<p style="font-size:17px; font-weight:500; color:#444; line-height:1.4;">
-  Click PDF to download the report<br />
-  You can now request your peer review
-</p>
+                  peer assessment<br />
+                  completed
+                    </h3>
+
+<div style="margin-top:10px;">
+  <div class="step">
+    <span class="number-circle">1</span>
+    <span>Your scores are recorded</span>
+  </div>
+  <div class="step">
+    <span class="number-circle">2</span>
+    <span>Click PDF to download the report</span>
+  </div>
+  <div class="step">
+    <span class="number-circle">3</span>
+    <span>Send a copy to your team member</span>
+  </div>
+</div>
                 </div>
                 <br />
                 <br />
