--- a/team/index.html
+++ b/team/index.html
@@ -724,23 +724,32 @@
                 <br />
                 <br />
 
-                <div class="big-check"></div>
-                <div class="center">
-                    <h3 style="font-size: 32px; margin: 8px 0 6px 0; color: #444;">
-                        self-assessment<br />
-                        completed
-                    <h3>Congratulations!</h3>
-<p id="recordedMsg" style="font-size:17px; font-weight:500; color:#444; line-height:1.4; margin-bottom:4px;">
-  Your assessment is recorded.
-</p>
-<p style="font-size:17px; font-weight:500; color:#444; line-height:1.4;">
-  Click PDF to download the report<br />
-  You can now request your peer review
-</p>
-                </div>
-                <br />
-                <br />
-                <br />
+               <div class="big-check"></div>
+<div class="center">
+  <h3 style="font-size: 32px; margin: 8px 0 6px 0; color: #444;">
+    self-assessment<br />
+    completed
+  </h3>
+
+  <div style="margin-top:10px;">
+    <div class="step">
+      <span class="number-circle">1</span>
+      <span>Your scores are recorded</span>
+    </div>
+    <div class="step">
+      <span class="number-circle">2</span>
+      <span>Click PDF to download the report</span>
+    </div>
+    <div class="step">
+      <span class="number-circle">3</span>
+      <span>Ask your peer to review you</span>
+    </div>
+  </div>
+</div>
+<br />
+<br />
+<br />
+
                 <div class="page-actions" style="display: flex; gap: 14px; justify-content: center; margin-top: 10px;">
                     <button class="btn-secondary btn-wide" id="congratsBack">Back</button>
                     <button class="btn-wide" id="congratsPdf">PDF</button>
