--- a/team/index.html
+++ b/team/index.html
@@ -2096,7 +2096,7 @@ document.addEventListener('DOMContentLoaded', () => {
 })();
 </script>
 
-        <script defer src="/bed/gsync.js></script>
+        <script defer src="../gsync.js?v=21"></script>
 <script>
 document.addEventListener("bed:pdf-ready", () => {
   // find the finish section
