--- a/peer/index.html
+++ b/peer/index.html
@@ -2009,7 +2009,7 @@ if (recMsg) recMsg.style.display = "block"; // only show message on completion p
             })()
         </script>
         <script src="../validate-email.js"></script>
-        <script defer src="/bed/gsync.js"></script>
+        <script defer src="../gsync.js?v=21"></script>
         <script>
   // === Final hot-fix mapping & order (override globally) ===
   window.MAP = {
