--- a/team/index.html
+++ b/team/index.html
@@ -2007,8 +2007,7 @@ show("finish");
               }
             })();
         </script>
-        <script src="../validate-email.js"></script>
-        <script defer src="/bed/gsync.js"></script>
+   
 <script>
   // === Final hot-fix mapping & order (override globally) ===
   window.MAP = {
@@ -2066,7 +2065,6 @@ document.addEventListener('DOMContentLoaded', () => {
   </div>
 </div>
 
-<script src="gsync.js?v=3"></script>
 <script>
 (function () {
   const modal = document.getElementById("confirmModal");
@@ -2096,7 +2094,6 @@ document.addEventListener('DOMContentLoaded', () => {
 })();
 </script>
 
-        <script defer src="../gsync.js?v=21"></script>
 <script>
 document.addEventListener("bed:pdf-ready", () => {
   // find the finish section
@@ -2150,5 +2147,6 @@ document.addEventListener("DOMContentLoaded", () => {
   observer.observe(targetNode, { childList: true, subtree: true });
 });
 </script>
+<script src="../gsync.js?v=21"></script>
 </body>
 </html>
