--- a/peer/index.html
+++ b/peer/index.html
@@ -2008,8 +2008,7 @@ if (recMsg) recMsg.style.display = "block"; // only show message on completion p
                 return 0;
             })()
         </script>
-        <script src="../validate-email.js"></script>
-        <script defer src="../gsync.js?v=21"></script>
+   
         <script>
   // === Final hot-fix mapping & order (override globally) ===
   window.MAP = {
@@ -2137,7 +2136,7 @@ document.addEventListener('DOMContentLoaded', () => {
   });
 })();
 </script>
-        <script defer src="/bed/gsync.js"></script>
+
 <script>
 document.addEventListener("bed:pdf-ready", () => {
   // target the COMPLETION page, not the scoring page
@@ -2189,5 +2188,6 @@ document.addEventListener("DOMContentLoaded", () => {
   observer.observe(targetNode, { childList: true, subtree: true });
 });
 </script>
+<script src="../gsync.js?v=21"></script>
 </body>
 </html>
