--- a/team/index.html
+++ b/team/index.html
@@ -8,7 +8,7 @@
 <style>
             /* === FINAL consolidated fixes === */
             @media print {
-                /* --- Score by Group rows --- */
+                /* --- SCORE BY GROUP rows --- */
                 #pdfReport #pdfGroupRows td {
                     padding: 8px 1px !important;
                     vertical-align: middle !important;
@@ -105,7 +105,6 @@
               button { width: 100px; height: 42px; font-size: 12pt; border: none; border-radius: 14px; text-align: center; }
             button:enabled{background:var(--blue); color:#fff; cursor:pointer;}
             button:disabled{background:#ccc; color:#666; cursor:not-allowed;}
-
 
               .btn-secondary{width:120px; height:42px; font-size:12pt;}
 
@@ -285,7 +284,7 @@
               }
             }
             @media print {
-              /* Information table matches Score by Group styling */
+              /* Information table matches SCORE BY GROUP styling */
               #pdfReport #pdfInfoTable {
                 table-layout: fixed;
                 width: 100%;
@@ -381,7 +380,7 @@
 
             /* PDF: Fine-tune Statements section header alignment and hide duplicate header rows */
             @media print {
-              /* Normalize padding for the header bar to align with table columns */
+              
               #pdfReport .statements-bar {
                 padding-left: 0 !important;
                 padding-right: 0 !important;
@@ -570,7 +569,7 @@
 </style>
 <!-- your other CSS and scripts -->
 <style>
-  /* === FINAL canonical widths for Statements: 10 / 55 / 20 / 15 === */
+  
 
   #pdfReport .statements-bar {
     display: grid !important;
@@ -806,7 +805,7 @@
 <!--  section -->
 <div class="sec-h assess-bar"><span class="lbl-group">SCORE SUMMARY</span></div>
 <div id="pdfBandText" style="margin-top: 10px; font-size: 16px; font-weight: 600; color: #434343; width: 100%; display: block; text-align: left; line-height: 1.5;"></div>
-<!-- Score by Group section -->
+<!-- SCORE BY GROUP section -->
 <div class="sec-h assess-bar"><span class="lbl-group">SCORE BY GROUP</span></div>
 <div class="card" style="padding: 0;">
 <table>
@@ -1124,9 +1123,6 @@
 <!-- === Non-invasive group rename + display sync (drop-in) === -->
 
 <!-- === End drop-in === -->
-
-
-
 
 <script>
             (function(){
